# VetClinic

./: db.sqlite3  old.db.sqlite3  pyproject.toml
VetClinic/: asgi.py  settings.py  urls.py  wsgi.py
personal_area/: forms.py  views.py
personal_area/templates/: calendar.html  item.html  lkbase.html  pet.html  registration.html  services.html  time.html  user.html
personal_area/templates/authentication/: login.html
site_vetclinic/: admin.py  apps.py  models.py  views.py
site_vetclinic/migrations/: 0001_initial.py  0002_user_photo.py  0003_groupservice_photo.py
site_vetclinic/templates/: petlist.html
web_site/: views.py
web_site/static/components/wlcomponents/calltouch/templates/.default/: script.js?16484523923457
web_site/static/components/wlcomponents/form.result.new/templates/main/: script.js?16317782243046
web_site/static/components/wlcomponents/form.result.new/templates/vacancy/: script.js?16399825533035
web_site/static/components/wlcomponents/news.list/templates/services-list-with-category/: script.js?16345471063030
web_site/static/templates/vetcity/css/: custom.css?164845239236922.css  main.css  modal-window.css?16317782243928.css  owl.carousel.min.css?16269416623356.css  style_secondary.css?163177822419507.css
web_site/static/templates/vetcity/js/: main.js?16353386316990
web_site/templates/: about.html  base.html  contacts.html  index.html
web_site/templates/doctors/: doctors.html  item.html
web_site/templates/services/: analiz.html  item.html  services.html
(+11 files in other folders)
