[tool.poetry]
name = "vetclinic"
version = "0.1.0"
description = ""
authors = ["Alisa <alisa.babukh@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
Django = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
